# NTU_BeeBot

./: README.md  dependencies.sh  dependencies.sh~
Tobotdriver/: Driver.uxf  (+6 more)
beebot_planners_master/beebot_rrt_planner/: CMakeLists.txt  beebot_smp_planner_plugin.xml  package.xml
beebot_planners_master/beebot_rrt_planner/include/beebot_rrt_planner/: beebot_smp_planner.h  cell.cpp  grid.cpp  grid.h  thetastar_leading_rrt.h  trajectory.cpp
beebot_planners_master/beebot_rrt_planner/launch/: test_smp_planner.launch
beebot_planners_master/beebot_rrt_planner/src/: beebot_smp_planner.cpp  costmap_layers_dyn_rec_handler.cpp  thetastar_leading_rrt.cpp
mobile_safeguard_primitive/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
mobile_safeguard_primitive/include/mobile_safeguard_primitive/: adstar_planner.h  beebot_DStarLite_planner.h
mobile_safeguard_primitive/launch/: .start_amcl.launch.swp  gmapping.launch  hokuyo.launch  robotStartup.launch  start_navigation.launch  start_tf.launch  xtion+rgbdslam.launch
mobile_safeguard_primitive/launch/SLAMMOT/: SLAMMOT overall architecture.uxf  beebot_amcl.launch  beebot_bringup.launch  beebot_bringup.launch~  beebot_slammot.launch  beebot_slammot.launch~  ekf_filtered_odom.launch  ekf_filtered_odom.launch~  laser_odometry.launch  laser_odometry.launch~  remote_client.launch  remote_client.launch~  rtabmap+spencer.launch  rtabmap+spencer.launch~  rtabmap_robot_side.launch  slammot_client.launch  slammot_client.launch~  visual_odometry.launch  visual_odometry.launch~
mobile_safeguard_primitive/launch/SLAMMOT/URDF/: my_tobot.urdf.xacro  test_tf.launch  test_tf.launch~
mobile_safeguard_primitive/launch/navigation/: beebot_2d_planner.launch  beebot_nav.launch  beebot_nav.launch~  beebot_sim_planner.launch  client_nav.launch  client_nav.launch~  nav_minimum_create.launch  nav_minimum_create.launch~
mobile_safeguard_primitive/launch/navigation/beebot_move_base/: sim_move_base.launch  sim_move_base.launch~  sim_move_base~
mobile_safeguard_primitive/launch/navigation/client_side/: client_nav.launch
mobile_safeguard_primitive/launch/navigation/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~
mobile_safeguard_primitive/launch/navigation/maps/: hector_slam_map_18:16:11.tif  hector_slam_map_18:16:21.tfw  hector_slam_map_18:16:21.tif  hector_slam_map_18:16:31.tif  hector_slam_map_18:16:41.tif  hector_slam_map_18:16:51.tif  hector_slam_map_18:17:01.tfw  hector_slam_map_18:17:01.tif  hector_slam_map_18:17:11.tfw  hector_slam_map_18:17:11.tif  hector_slam_map_18:17:21.tfw  hector_slam_map_18:17:21.tif  hector_slam_map_18:17:31.tfw  hector_slam_map_18:17:31.tif  hector_slam_map_18:17:41.tfw  hector_slam_map_18:17:41.tif  hector_slam_map_18:17:51.tif  hector_slam_map_18:18:01.tfw  hector_slam_map_18:18:01.tif  hector_slam_map_18:18:11.tfw  hector_slam_map_18:18:11.tif  hector_slam_map_18:18:21.tif  hector_slam_map_18:18:31.tif  hector_slam_map_18:18:41.tif  hector_slam_map_18:18:51.tfw  hector_slam_map_18:18:51.tif  hector_slam_map_18:19:01.tif  hector_slam_map_18:19:11.tif  hector_slam_map_18:19:21.tfw  hector_slam_map_18:19:21.tif  hector_slam_map_18:19:31.tif  hector_slam_map_18:19:41.tfw  hector_slam_map_18:19:41.tif  hector_slam_map_18:19:51.tfw  hector_slam_map_18:19:51.tif  hector_slam_map_18:20:01.tif  hector_slam_map_18:20:11.tif  hector_slam_map_18:20:21.tif  hector_slam_map_18:20:31.tif  hector_slam_map_18:20:41.tif  (+136 more)
mobile_safeguard_primitive/launch/navigation/nav_planner/: move_base.launch  riskrrt_planner.launch  riskrrt_planner.launch~  riskrrt_planner.launh~  test_riskrrt_planner.launch
mobile_safeguard_primitive/launch/navigation/nav_planner/rviz/: test_planner.rviz
mobile_safeguard_primitive/launch/navigation/odometries/: ekf_filtered_odom.launch
mobile_safeguard_primitive/launch/navigation/robot_side/: beebot_nav.launch  nav_minimum_create.launch
mobile_safeguard_primitive/launch/navigation/rviz/: my_rbx1_nav_config.rviz
mobile_safeguard_primitive/launch/navigation/simulation/: beebot_sim_planner.launch  fullmap_sim_planner.launch  hector_mapping_test.launch  improvedd-riskrrtplanner.launch  map_loader_localizer.launch  rviz_map_fake_move_base.launch  sim_move_base.launch
mobile_safeguard_primitive/launch/navigation/utils/SLAM/: hector_slam.launch
mobile_safeguard_primitive/launch/remote_people_tracking/: laser_people_detection.launch  laser_people_detection.launch~  pointCloud_builder.launch  pointCloud_builder.launch~  remote_people_tracking.launch~  remote_people_tracking~  spencer_hacking.launch  spencer_hacking.launch~
mobile_safeguard_primitive/launch/rgbdslam v2/: my_openni+rgbdslam.launch  my_openni+rgbdslam.launch~  robot_my_openni+rgbdslam.launch  robot_my_openni+rgbdslam.launch~
mobile_safeguard_primitive/launch/rtabmapping/: rtabmap+spencer.launch  rtabmap+spencer.launch~  rtabmap_client_rtabmapviz.launch  rtabmap_client_side.launch  rtabmap_client_side.launch~  rtabmap_robot_side.launch  rtabmap_robot_side.launch~  rtabmapping_essential_startup.launch
mobile_safeguard_primitive/launch/rtabmapping/rviz/: my_rviz_configuration.rviz
mobile_safeguard_primitive/launch/rtabmapping/tf_config/: my_start_tf.launch  my_tobot.urdf.xacro  my_tobot.urdf.xacro~
mobile_safeguard_primitive/launch/rtabmapping/utils/: rtabmap_visual_odometry.launch  rtabmapping_essential_startup.launch
mobile_safeguard_primitive/map/: map_2.pgm  map_2.yaml  map_2_bak.pgm  map_2_bak_2.pgm  test_map.pgm
mobile_safeguard_primitive/src/: adstar_planner.cpp  beebot_DStarLite_planner.cpp  beebot_planner_2d.cpp  mobile_safeguard_primitive.cpp  path2traj_conv.cpp  people_filter.cpp  people_filter.cpp~  pre-processing.cpp~  slammot_y_shaped_tube.cpp  slammot_y_shaped_tube.cpp~
mobile_safeguard_primitive/src/Complementary data/: slammot_y_shaped_tube_related_topics.uxf  tracking_single_rgbd_sensor.launch.xmind
teleop_tobot/: CMakeLists.txt  package.xml  teleop_twist_keyboard.kdev4  teleop_twist_keyboard.py
teleop_tobot/srv/: getobject.srv  getobject.srv~  sentobject.srv  sentobject.srv~
(+192 files in other folders)
